--- a/html/components/component_button.html
+++ b/html/components/component_button.html
@@ -108,13 +108,13 @@
 			<div class="guide-column-list">
 				<button type="button" class="btn-large btn-primary">btn-large</button>
 				<button type="button" class="btn-medium btn-primary">btn-medium</button>
-				<button type="button" class="btn-small btn-primary">btn-small</button>
+				<button type="button" class="btn-xsmall btn-primary">btn-xsmall</button>
 			</div>
 			<hr>
 
 			<h2>CTA <span>Radius</span></h2>
 			<div class="guide-column-list">
-				<button type="button" class="btn-small btn-primary btn-round">btn-round</button>
+				<button type="button" class="btn-xsmall btn-primary btn-round">btn-round</button>
 			</div>
 			<hr>
 
