--- a/html/components/component_button_icon.html
+++ b/html/components/component_button_icon.html
@@ -77,13 +77,15 @@
 		<div class="ui-guide-section">
 			<h2>Button <span>Large</span></h2>
 			<div class="guide-column-list">
-				<button type="button" class="btn-large btn-primary"><i class="ico-share"></i><span>공유</span></button>
-				<button type="button" class="btn-large btn-primary"><i class="ico-check"></i><span>Check</span></button>
-				<button type="button" class="btn-large btn-primary"><i class="ico-add"></i><span>명함 등록</span></button>
-				<button type="button" class="btn-large btn-primary"><i class="ico-bio-auth-ios"></i><span>생체인증 로그인</span></button>
-				<button type="button" class="btn-large btn-primary"><i class="ico-bio-auth-android"></i><span>생체인증 로그인</span></button>
-				<button type="button" class="btn-large btn-primary"><i class="ico-refresh"></i><span>다시 시도</span></button>
-				<button type="button" class="btn-large btn-primary"><i class="ico-login02"></i><span>통합 로그인</span></button>
+				<button type="button" class="btn-large btn-primary"><i class="ico-share"></i>공유</button>
+				<button type="button" class="btn-large btn-primary"><i class="ico-check"></i>Check</button>
+				<button type="button" class="btn-large btn-primary"><i class="ico-add"></i>명함 등록</button>
+				<button type="button" class="btn-large btn-primary"><i class="ico-bio-auth-ios"></i>생체인증 로그인</button>
+				<button type="button" class="btn-large btn-primary"><i class="ico-bio-auth-android"></i>생체인증 로그인</button>
+				<button type="button" class="btn-large btn-primary"><i class="ico-refresh"></i>다시 시도</button>
+				<button type="button" class="btn-large btn-primary"><i class="ico-login02"></i>통합 로그인</button>
+				<button type="button" class="btn-large btn-primary">비교담기<i class="ico-compare"></i></button>
+				<button type="button" class="btn-large btn-primary">비교담기<i class="ico-check"></i></button>
 			</div>
 			<hr>
 			<h2>Button <span>Medium</span></h2>
@@ -92,11 +94,11 @@
 			<hr>
 			<h2>Button <span>Small</span></h2>
 			<div class="guide-column-list">
-				<button type="button" class="btn-small btn-outlined btn-round"><i class="ico-delete"></i>삭제</button>
-				<button type="button" class="btn-small btn-outlined btn-round"><i class="ico-modify"></i>수정</button>
-				<button type="button" class="btn-small btn-outlined btn-round"><i class="ico-refresh"></i><span>다시 시도</span></button>
-				<button type="button" class="btn-small btn-outlined btn-round"><i class="ico-memo"></i><span>메모 등록</span></button>
-				<div class="btn-small btn-outlined btn-round">
+				<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-delete"></i>삭제</button>
+				<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-modify"></i>수정</button>
+				<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-refresh"></i>다시 시도</button>
+				<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-memo"></i>메모 등록</button>
+				<div class="btn-xsmall btn-outlined btn-round">
 					<button class="btn-inner">반도체</button>
 					<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
 				</div>
