--- a/html/components/component_group.html
+++ b/html/components/component_group.html
@@ -89,8 +89,8 @@
 				<div class="group">
 					<strong class="title-medium">별칭명</strong>
 					<div class="btn-wrap gap4 p0">
-						<button type="button" class="btn-small btn-outlined btn-round" onclick="swalFire()"><i class="ico-delete"></i>삭제</button>
-						<button type="button" class="btn-small btn-outlined btn-round"><i class="ico-modify"></i>수정</button>
+						<button type="button" class="btn-xsmall btn-outlined btn-round" onclick="swalFire()"><i class="ico-delete"></i>삭제</button>
+						<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-modify"></i>수정</button>
 					</div>
 				</div>
 				<!-- //group -->
@@ -183,31 +183,31 @@
 					<div class="group-content content-fluid px0 mt14">
 						<ul class="d-flex overflow-list px16">
 							<li>
-								<div class="btn-small btn-outlined btn-round">
+								<div class="btn-xsmall btn-outlined btn-round">
 									<button class="btn-inner">반도체</button>
 									<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
 								</div>
 							</li>
 							<li>
-								<div class="btn-small btn-outlined btn-round">
+								<div class="btn-xsmall btn-outlined btn-round">
 									<button class="btn-inner">배당</button>
 									<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
 								</div>
 							</li>
 							<li>
-								<div class="btn-small btn-outlined btn-round">
+								<div class="btn-xsmall btn-outlined btn-round">
 									<button class="btn-inner">레버리지</button>
 									<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
 								</div>
 							</li>
 							<li>
-								<div class="btn-small btn-outlined btn-round">
+								<div class="btn-xsmall btn-outlined btn-round">
 									<button class="btn-inner">키워드</button>
 									<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
 								</div>
 							</li>
 							<li>
-								<div class="btn-small btn-outlined btn-round">
+								<div class="btn-xsmall btn-outlined btn-round">
 									<button class="btn-inner">키워드</button>
 									<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
 								</div>
