--- a/html/components/component_toast.html
+++ b/html/components/component_toast.html
@@ -83,7 +83,7 @@
 
 	<script>
 		$('#alert').click(function(event) {
-			toastr.alert(`<div class="btn-toast-wrap"><button type="button" class="btn-small btn-ghost-white">Small 버튼명</button>`, 'You clicked alert toast', {
+			toastr.alert(`<div class="btn-toast-wrap"><button type="button" class="btn-xsmall btn-ghost-white">Small 버튼명</button>`, 'You clicked alert toast', {
 				"timeOut": 0,
 				"extendedTimeOut": 0,
 				"preventDuplicates": true,
