--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -222,6 +222,34 @@
 				</div>
 			</div>
 			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-fav</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-fav bg-icon bg-blue-300"></i>
+					<i class="icon-only icon-36 icon-fav bg-icon bg-blue-300"></i>
+					<i class="icon-only icon-32 icon-fav bg-icon bg-blue-300"></i>
+					<i class="icon-only icon-28 icon-fav bg-icon bg-blue-300"></i>
+					<i class="icon-only icon-24 icon-fav bg-icon bg-blue-300"></i>
+					<i class="icon-only icon-20 icon-fav bg-icon bg-blue-300"></i>
+					<i class="icon-only icon-14 icon-fav bg-icon bg-blue-300"></i>
+					<i class="icon-only icon-12 icon-fav bg-icon bg-blue-300"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-fav-active</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-fav-active bg-icon bg-blue-500"></i>
+					<i class="icon-only icon-36 icon-fav-active bg-icon bg-blue-500"></i>
+					<i class="icon-only icon-32 icon-fav-active bg-icon bg-blue-500"></i>
+					<i class="icon-only icon-28 icon-fav-active bg-icon bg-blue-500"></i>
+					<i class="icon-only icon-24 icon-fav-active bg-icon bg-blue-500"></i>
+					<i class="icon-only icon-20 icon-fav-active bg-icon bg-blue-500"></i>
+					<i class="icon-only icon-14 icon-fav-active bg-icon bg-blue-500"></i>
+					<i class="icon-only icon-12 icon-fav-active bg-icon bg-blue-500"></i>
+				</div>
+			</div>
+			<hr>
 
 		</div>
 	</div>
