--- a/html/components/component_input_text.html
+++ b/html/components/component_input_text.html
@@ -123,7 +123,7 @@
 							<div class="textarea-length">
 								<div class="left">0/300자</div>
                                 <div class="right">
-                                    <button type="button" class="btn-small btn-primary btn-round">저장</button>
+                                    <button type="button" class="btn-xsmall btn-primary btn-round">저장</button>
                                 </div>
 							</div>
 						</div>
