--- a/html/components/component_card.html
+++ b/html/components/component_card.html
@@ -270,7 +270,7 @@
 						</div>
 						<div class="favorite-btn-wrap" data-toggle="toggle-wrap">
 							<button type="button" data-toggle="toggle-trigger">
-								<i class="icon-only icon-36 icon-fav bg-icon" data-switch-inner="true" data-switch-inner-before="icon-fav bg-gray-300" data-switch-inner-after="icon-fav-active bg-blue-300"></i>
+								<i class="icon-only icon-36 icon-fav bg-icon" data-switch-inner="true" data-switch-inner-before="icon-fav" data-switch-inner-after="icon-fav-active"></i>
 								<span class="toggle-off blind">관심펀드 등록</span>
 								<span class="toggle-on blind">관심펀드 등록해제</span>
 							</button>
