--- a/html/components/component_card.html
+++ b/html/components/component_card.html
@@ -173,7 +173,7 @@
 							<strong class="title-medium">김성민</strong>
 							<span class="divide-list">
 								<span>디지털공통개발부 UI/UX팀</span>
-								<span class="division h12 mx8"></span>
+								<span class="division h14 mx8"></span>
 								<span>과장</span>
 							</span>
 							<span class="company-name">파인너츠</span>
@@ -198,7 +198,7 @@
 							<strong class="title-medium">이름</strong>
 							<span class="divide-list">
 								<span>부서명</span>
-								<span class="division h12 mx8"></span>
+								<span class="division h14 mx8"></span>
 								<span>직책</span>
 							</span>
 							<span class="company-name">회사명</span>
@@ -225,18 +225,19 @@
 
 			<div class="ui-guide-box">
 				<h2>Fund Card</h2>
+				<!-- fund-card-list -->
 				<div class="fund-card-list">
-					<div class="fund-card">
-						<div class="recommend">추천</div>
+					<div class="fund-card" data-toggle="toggle-wrap">
+						<div class="clip clip-recommend">추천</div>
 						<div class="tag-wrap">
 							<div class="tags tags-small tags-lightRed">#높은위험</div>
 							<div class="tags tags-small tags-lightYellow">#원금손실가능</div>
 						</div>
-						<a href="#">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</a>
+						<a href="#" class="fund-title headline-small">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</a>
 						<div class="divide-list">
-							<span>글로벌</span>
-							<div class="division h12 mx8"></div>
-							<span>수수료선취 · 온라인</span>
+							<span class="divide01">글로벌</span>
+							<div class="division h14 mx8"></div>
+							<span class="divide02">수수료선취 · 온라인</span>
 						</div>
 						<dl class="expect-list">
 							<div class="list">
@@ -260,7 +261,7 @@
 							<dt>추천사유</dt>
 							<dd>텍스트가 들어갑니다 텍스트가 들어갑니다 텍스트가 들어갑니다 텍스트가 들어갑니다</dd>
 						</dl>
-						<div class="btn-wrap" data-toggle="toggle-wrap">
+						<div class="compare-btn-wrap">
 							<button type="button" class="btn-small btn-secondary btn-round" data-toggle="toggle-trigger" data-switch-before="btn-secondary" data-switch-after="btn-primary">
 								비교담기
 								<i class="ico-compare" data-switch-inner="true" data-switch-inner-before="ico-compare" data-switch-inner-after="ico-check"></i>
@@ -278,6 +279,8 @@
 
 					</div>
 				</div>
+				<!-- //fund-card-list -->
+
 
 			</div>
 
