--- a/html/components/component_button_icon.html
+++ b/html/components/component_button_icon.html
@@ -98,6 +98,8 @@
 				<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-modify"></i>수정</button>
 				<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-refresh"></i>다시 시도</button>
 				<button type="button" class="btn-xsmall btn-outlined btn-round"><i class="ico-memo"></i>메모 등록</button>
+				<button type="button" class="btn-xsmall btn-outlined btn-round">바로가기<i class="ico-chevron"></i></button>
+				<button type="button" class="btn-xsmall btn-outlined btn-round">반도체<i class="ico-close-16"></i></button>
 				<div class="btn-xsmall btn-outlined btn-round">
 					<button class="btn-inner">반도체</button>
 					<button aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
