--- a/resources/css/ui-content.css
+++ b/resources/css/ui-content.css
@@ -22,7 +22,7 @@
 .businesscard-list {}
 .businesscard-list .list-group-item {position:relative;display:flex;padding:24px 0px;align-items:center;justify-content:space-between;gap:16px;border:1px solid transparent;}
 .businesscard-list .list-group-item:first-child:before {content:'';position:absolute;left:8px;right:8px;top:0;height:1px;background-color:var(--border-4);}
-.businesscard-list .list-group-item:after {content:'';position:absolute;left:8px;right:8px;bottom:0;height:1px;background-color:var(--border-4);}
+.businesscard-list .list-group-item:after {content:'';position:absolute;left:0;right:0;bottom:0;height:1px;background-color:var(--border-4);}
 .businesscard-list .list-group-item .handler {flex:0 0 24px;width:24px;height:24px;
     -webkit-mask-position:center center;
     mask-position:center center;
@@ -189,7 +189,7 @@
 
 /* step-end */
 .step-end {display:inline-flex;flex-direction:column;align-items:center;background-color:var(--white-100);padding:48px;margin:0 auto;}
-.step-end p {text-align:center;margin-top: 12px;font-size: 24px;line-height: 1.4;font-weight:700;}
+.step-end p {text-align:center;margin-top:12px;font-size:24px;line-height:1.4;font-weight:700;}
 
 /* memo-list */
 .memo-list {}
@@ -245,9 +245,6 @@
 .keyword-list button .flag-emerging {background:url(../images/flag/ico_emerging.svg) center center / contain no-repeat;}
 .keyword-list button .flag-foreign {background:url(../images/flag/ico_foreign.svg) center center / contain no-repeat;}
 
-/* fund-result */
-.fund-result {background-color:var(--background-bg_lightGray);}
-
 /* change-history */
 .change-history {padding:16px 0;}
 .change-history .body-medium {padding:4px 0;margin-top:8px;font-weight:400;}
@@ -258,3 +255,34 @@
 .change-history dl dd {display:flex;align-items:center;gap:8px;margin-top:2px;}
 .change-history dl dd b {font-size:14px;font-weight:400;color:var(--typography-caption);}
 .change-history dl dd span {font-size:14px;font-weight:400;color:var(--typography-gray);}
+
+
+/* fund-result */
+.fund-result {padding-top:40px;}
+.fund-result .result-title {display:flex;align-items:center;justify-content:center;text-align:center;font-size:16px;font-weight:700;line-height:1.5;margin-bottom:24px;}
+.fund-result .result-title span {font-size:18px;color:var(--status-active);vertical-align:top;}
+
+/* func-card-list */
+.fund-card-list {}
+.fund-card-list .fund-card:not(:last-child) {margin-bottom:16px;}
+.fund-card {position:relative;border-radius:16px;background-color:var(--surface-surface);box-shadow:0px 8px 16px -4px rgba(0, 0, 0, 0.05);padding:40px 24px 24px;border:2px solid transparent;
+    --fund-zIndex:1;
+}
+.fund-card .clip {position:absolute;top:-2px;left:22px;z-index:var(--fund-zIndex);}
+.fund-card .tag-wrap {display:flex;gap:4px;}
+.fund-card .fund-title {margin-top:14px;padding:0 4px;}
+.fund-card .divide-list {padding:0 4px;margin-top:8px;}
+.fund-card .divide-list .divide01 {color:var(--typography-gray)}
+.fund-card .expect-list {display:flex;align-items:center;gap:2px;border-radius:8px;background-color:var(--surface-surface50);padding:12px 4px;margin-top:16px;}
+.fund-card .expect-list .list {flex:1;display:flex;flex-direction:column;justify-content:space-between;gap:8px;text-align:center;}
+.fund-card .expect-list dt {font-size:16px;color:var(--typography-gray);line-height:1;}
+.fund-card .expect-list dd {font-size:13px;font-weight:400;color:var(--typography-gray);line-height:1;}
+.fund-card .expect-list .list.rise dt {font-weight:700;}
+.fund-card .expect-list .list.rise dd {color:var(--status-error);}
+.fund-card .expect-reason {border-radius:8px;background-color:var(--surface-surface50);padding:12px 12px 14px;margin-top:8px;}
+.fund-card .expect-reason dt {font-size:16px;color:var(--typography-gray);line-height:1;}
+.fund-card .expect-reason dd {font-size:16px;font-weight:400;color:var(--gray-600);margin-top:8px;}
+.fund-card .compare-btn-wrap {position:relative;display:flex;justify-content:flex-end;margin-top:16px;z-index:var(--fund-zIndex);}
+.fund-card .favorite-btn-wrap {position:absolute;top:10px;right:10px;z-index:var(--fund-zIndex)}
+.fund-card .favorite-btn-wrap button {display:flex;width:58px;height:52px;align-items:center;justify-content:center;}
+.fund-card.is-toggled {border-color:var(--border-primary_enabled);}
