--- a/resources/css/ui-layout.css
+++ b/resources/css/ui-layout.css
@@ -1,6 +1,7 @@
 @charset "utf-8";
 
 /* body */
+body {background-color:var(--white-100);}
 body,
 .modal__content main {}
 
@@ -41,11 +42,11 @@ header {position:sticky;left:0;top:0;width:100%;z-index:var(--header-zIndex);bac
 .header-btn .i-favorite {background:url(../images/header/ico_favorite.svg) center center / 24px 24px no-repeat;}
 
 /* main */
-main {position:relative;min-height:100vh;background-color:var(--white-100);}
+main {position:relative;min-height:100vh;}
 main {display:flex;flex-direction:column;}
 main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 #container {flex:1 1 100%;}
-.content {padding:0 16px;height:100%;flex:1 1 100%;display:flex;flex-direction:column;max-width:100vw;}
+.content {padding:0 16px 24px;height:100%;flex:1 1 100%;display:flex;flex-direction:column;max-width:100vw;}
 .content-fluid:not(.content) {margin-left:-16px;margin-right:-16px;padding-left:16px;padding-right:16px;}
 .division-center {flex:1 1 100%;display:flex;justify-content:center;flex-direction:column;padding:16px 0;}
 
@@ -54,15 +55,21 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 
 /* bottom-btn */
 .bottom-btn {position:sticky;width:100%;left:0;bottom:0;background-color:inherit;z-index:calc(var(--header-zIndex) - 1);}
+.bottom-btn-title {padding:24px 24px 8px 24px;background-color:var(--white-100);border-radius:8px 8px 0 0;}
 
 
 /* btn-wrap */
-.btn-wrap {display:flex;gap:8px;padding:12px 16px;justify-content:center;align-items:center;}
+.btn-wrap {display:flex;gap:8px;padding:12px 16px;justify-content:center;align-items:center;background-color:var(--white-100);}
 .btn-wrap > *:only-child {flex:1 1 100%;}
 .btn-wrap > * {flex:1;}
 .btn-wrap .btn-outlined {flex:0 1 100px;}
 .btn-wrap .anchor {flex:0 0 auto;}
 .content .btn-wrap {padding:16px 0;}
+
+.btn-nowrap {}
+.btn-nowrap button {flex:0 0 calc(50% - 4px)!important;white-space:inherit;max-width:calc(50% - 4px);}
+.btn-nowrap button span {white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+.btn-nowrap button.btn-outlined {border-style:dashed;color:var(--typography-placeholder);}
 
 /* select-option */
 .select-option {}
