--- a/html/components/component_tag.html
+++ b/html/components/component_tag.html
@@ -76,7 +76,15 @@
 
 		<div class="ui-guide-section">
 			<div class="ui-guide-box">
-				<h2>Small</h2>
+				<h2>Tags <span>Type</span></h2>
+				<div class="guide-column-list">
+					<div class="tags tags-small tags-black-80">레이블</div>
+					<div class="tags tags-small tags-round tags-black-80">레이블</div>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>Small <span>23</span></h2>
 				<div class="guide-column-list">
 					<div class="tags tags-small tags-lightBlue">레이블</div>
 					<div class="tags tags-small tags-lightGray">레이블</div>
@@ -86,54 +94,69 @@
 					<div class="tags tags-small tags-lightRed">레이블</div>
 					<div class="tags tags-small tags-lightYellow">레이블</div>
 					<div class="tags tags-small tags-lightPink">레이블</div>
+					<div class="tags tags-small tags-red-100">레이블</div>
+					<div class="tags tags-small tags-FFF4EB">레이블</div>
+					<div class="tags tags-small tags-green-50">레이블</div>
 					<div class="tags tags-small tags-disabled_bg">레이블</div>
 				</div>
 			</div>
 			<hr>
 			<div class="ui-guide-box">
-				<h2>Medium</h2>
+				<h2>Medium <span>32</span></h2>
 				<div class="guide-column-list">
 					<div class="tags tags-medium tags-lightGray">레이블</div>
 					<div class="tags tags-medium tags-black-80">레이블</div>
 					<div class="tags tags-medium tags-white">레이블</div>
 					<div class="tags tags-medium tags-lightBlue">레이블</div>
-					<div class="tags tags-medium tags-lightCyan">레이블</div>
-					<div class="tags tags-medium tags-lightPurple">레이블</div>
-					<div class="tags tags-medium tags-E6E2F2">레이블</div>
-					<div class="tags tags-medium tags-lightRed">레이블</div>
-					<div class="tags tags-medium tags-lightYellow">레이블</div>
-					<div class="tags tags-medium tags-lightPink">레이블</div>
 					<div class="tags tags-medium tags-blue">레이블</div>
+					<div class="tags tags-medium tags-lightCyan">레이블</div>
 					<div class="tags tags-medium tags-cyan">레이블</div>
+					<div class="tags tags-medium tags-lightPurple">레이블</div>
 					<div class="tags tags-medium tags-purple">레이블</div>
+					<div class="tags tags-medium tags-E6E2F2">레이블</div>
 					<div class="tags tags-medium tags-violet">레이블</div>
+					<div class="tags tags-medium tags-lightRed">레이블</div>
 					<div class="tags tags-medium tags-red">레이블</div>
+					<div class="tags tags-medium tags-lightYellow">레이블</div>
 					<div class="tags tags-medium tags-yellow">레이블</div>
+					<div class="tags tags-medium tags-lightPink">레이블</div>
 					<div class="tags tags-medium tags-pink">레이블</div>
+					<div class="tags tags-medium tags-green-50">레이블</div>
+					<div class="tags tags-medium tags-green-300">레이블</div>
+					<div class="tags tags-medium tags-red-100">레이블</div>
+					<div class="tags tags-medium tags-red-800">레이블</div>
+					<div class="tags tags-medium tags-FFF4EB">레이블</div>
+					<div class="tags tags-medium tags-F3773D">레이블</div>
 					<div class="tags tags-medium tags-disabled_bg">레이블</div>
 				</div>
 			</div>
 			<hr>
 			<div class="ui-guide-box">
-				<h2>Large</h2>
+				<h2>Large <span>38</span></h2>
 				<div class="guide-column-list">
 					<div class="tags tags-large tags-lightGray">레이블</div>
 					<div class="tags tags-large tags-black-80">레이블</div>
 					<div class="tags tags-large tags-white">레이블</div>
 					<div class="tags tags-large tags-lightBlue">레이블</div>
-					<div class="tags tags-large tags-lightCyan">레이블</div>
-					<div class="tags tags-large tags-lightPurple">레이블</div>
-					<div class="tags tags-large tags-E6E2F2">레이블</div>
-					<div class="tags tags-large tags-lightRed">레이블</div>
-					<div class="tags tags-large tags-lightYellow">레이블</div>
-					<div class="tags tags-large tags-lightPink">레이블</div>
 					<div class="tags tags-large tags-blue">레이블</div>
+					<div class="tags tags-large tags-lightCyan">레이블</div>
 					<div class="tags tags-large tags-cyan">레이블</div>
+					<div class="tags tags-large tags-lightPurple">레이블</div>
 					<div class="tags tags-large tags-purple">레이블</div>
+					<div class="tags tags-large tags-E6E2F2">레이블</div>
 					<div class="tags tags-large tags-violet">레이블</div>
+					<div class="tags tags-large tags-lightRed">레이블</div>
 					<div class="tags tags-large tags-red">레이블</div>
+					<div class="tags tags-large tags-lightYellow">레이블</div>
 					<div class="tags tags-large tags-yellow">레이블</div>
+					<div class="tags tags-large tags-lightPink">레이블</div>
 					<div class="tags tags-large tags-pink">레이블</div>
+					<div class="tags tags-large tags-green-50">레이블</div>
+					<div class="tags tags-large tags-green-300">레이블</div>
+					<div class="tags tags-large tags-red-100">레이블</div>
+					<div class="tags tags-large tags-red-800">레이블</div>
+					<div class="tags tags-large tags-FFF4EB">레이블</div>
+					<div class="tags tags-large tags-F3773D">레이블</div>
 					<div class="tags tags-large tags-disabled_bg">레이블</div>
 				</div>
 			</div>
